--- a/app/src/main/res/layout/activity_data_log.xml
+++ b/app/src/main/res/layout/activity_data_log.xml
@@ -15,6 +15,7 @@
         tools:layout_editor_absoluteX="0dp"
         android:id="@+id/projectsTitle"/>
 
+    <!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,6 +24,19 @@
         app:layout_constraintTop_toBottomOf="@+id/projectsTitle"
         tools:layout_editor_absoluteX="0dp"
         android:id="@+id/projectData"/>
+
+    -->
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintTop_toBottomOf="@+id/projectsTitle"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
+        android:id="@+id/dataList"
+        />
+
 
     <Button
         android:id="@+id/backButton"
