--- a/app/src/main/res/layout/activity_update_project.xml
+++ b/app/src/main/res/layout/activity_update_project.xml
@@ -11,7 +11,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:gravity="center"/>
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/enterHoursLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter the number of hours:"
+        app:layout_constraintTop_toBottomOf="@+id/project_data"/>
+
+    <EditText
+        android:id="@+id/enterHours"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="1"
+        app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"/>
+
+    <TextView
+        android:id="@+id/enterUVDoseLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter the given UV dose:"
+        app:layout_constraintTop_toBottomOf="@+id/enterHours"/>
+
+    <EditText
+        android:id="@+id/enterUVDose"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="350885.8888"
+        app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
 
     <Button
         android:id="@+id/backButton"
