--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -18,4 +18,14 @@
         android:text="Update"
         android:id="@+id/projectButton"
         />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="255dp"
+        android:text="Delete"
+        android:id="@+id/deleteButton"
+        />
+
 </FrameLayout>
