--- a/app/src/main/res/layout/activity_delete_project.xml
+++ b/app/src/main/res/layout/activity_delete_project.xml
@@ -6,34 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".DeleteProject">
 
-    <TextView
-        android:id="@+id/project_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/areYouSure"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Are you sure you want to delete this project?"
-        app:layout_constraintTop_toBottomOf="@+id/project_data"/>
 
-    <Button
-        android:id="@+id/noButton"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="NO"
-        app:layout_constraintBottom_toTopOf="@+id/yesButton"/>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/project_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/yesButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="YES"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            <TextView
+                android:id="@+id/areYouSure"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Are you sure you want to delete this project?"
+                app:layout_constraintTop_toBottomOf="@+id/project_data"/>
+
+            <Button
+                android:id="@+id/noButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="NO"
+                app:layout_constraintBottom_toTopOf="@+id/yesButton"/>
+
+            <Button
+                android:id="@+id/yesButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="YES"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </LinearLayout>
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
