--- a/app/src/main/res/layout/activity_update_project.xml
+++ b/app/src/main/res/layout/activity_update_project.xml
@@ -6,55 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".UpdateProject">
 
-    <TextView
-        android:id="@+id/project_data"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/project_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/enterHoursLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter the number of hours:"
-        app:layout_constraintTop_toBottomOf="@+id/project_data"/>
+            <TextView
+                android:id="@+id/enterHoursLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter the number of hours:"
+                app:layout_constraintTop_toBottomOf="@+id/project_data"/>
 
-    <EditText
-        android:id="@+id/enterHours"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1"
-        app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"/>
+            <EditText
+                android:id="@+id/enterHours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1"
+                app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"/>
 
-    <TextView
-        android:id="@+id/enterUVDoseLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter the given UV dose:"
-        app:layout_constraintTop_toBottomOf="@+id/enterHours"/>
+            <TextView
+                android:id="@+id/enterUVDoseLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter the given UV dose:"
+                app:layout_constraintTop_toBottomOf="@+id/enterHours"/>
 
-    <EditText
-        android:id="@+id/enterUVDose"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="350885.8888"
-        app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
+            <EditText
+                android:id="@+id/enterUVDose"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="350885.8888"
+                app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
 
-    <Button
-        android:id="@+id/updateButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Update"
-        app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
+            <Button
+                android:id="@+id/updateButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Update"
+                app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
