Tidied a bit and changed the Delete button colour to make it scary

--- a/app/src/main/res/layout/activity_delete_project.xml
+++ b/app/src/main/res/layout/activity_delete_project.xml
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="YES"
+                android:backgroundTint="@android:color/holo_red_light"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </LinearLayout>
     </ScrollView>
