--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -38,9 +38,5 @@
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:text="Update"
                 app:layout_constraintBottom_toTopOf="@+id/projectButton"/>
-
-
         </LinearLayout>
-    </ScrollView>
-
-</FrameLayout>
+    </ScrollView></FrameLayout>
