--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,11 +158,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
 
             <Button
+                android:id="@+id/getDataButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Get Data"
+                app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
+            <Button
                 android:id="@+id/goButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Go!"
-                app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
+                app:layout_constraintTop_toBottomOf="@+id/getDataButton"/>
 
             <Button
                 android:id="@+id/databaseButton"
