--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -176,6 +176,21 @@
                 android:layout_height="wrap_content"
                 android:text="Access database"
                 app:layout_constraintTop_toBottomOf="@+id/goButton"/>
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/btnSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/databaseButton"/>
+
+            <Button
+                android:id="@+id/signOutButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign out"
+                android:backgroundTint="@android:color/holo_red_light"
+                app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
